--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
            <li> <i>On valency problems of Saxl graphs</i> <br>
               joint with J. Chen <br>
             35 pages, <b>Journal of Group Theory</b>, to appear <br>
-                <a href=" ">arXiv:2012.13747</a> | <a href="https://doi.org/10.1515/jgth-2021-0123">doi: 10.1515/jgth-2021-0123</a> </li>
+                <a href="https://arxiv.org/abs/2012.13747">arXiv:2012.13747</a> | <a href="https://doi.org/10.1515/jgth-2021-0123">doi: 10.1515/jgth-2021-0123</a> </li>
             
           
           
