--- a/meetings.html
+++ b/meetings.html
@@ -74,7 +74,7 @@
           <li> July: <b>Groups and Graphs</b><br>
             Jiangxi University of Science and Technology, China (online) </li>
           <li> July: <b>23rd Postgraduate Group Theory Conference</b> (<a href="https://nms.kcl.ac.uk/miriam.norris/pgtc.html#home">link</a>) <br>
-            Imperial College, King’s College and City, University of London, UK </li>
+            Imperial College, King's College and City, University of London, UK </li>
           
           
           <br>
